# MemoriaOS

./: CMakeLists.txt  README.md
MemoriaOS/kernel/: CMakeLists.txt
MemoriaOS/kernel/arch/i686/boot/: boot.s  link.ld  multiboot.s
MemoriaOS/kernel/arch/i686/terminal/: terminal.cpp
MemoriaOS/kernel/arch/i686/vga/: vga.hpp
MemoriaOS/kernel/include/terminal/: terminal.hpp
MemoriaOS/kernel/kernel/: main.cpp
MemoriaOS/kernel/kernel/boot/: do_ctors.cpp  do_global_ctors.cpp  do_global_dtors.cpp  fini.cpp  init.cpp
MemoriaOS/libk++/: CMakeLists.txt
MemoriaOS/libk++/include/string/: memcpy.hpp  string.hpp  strlen.hpp
MemoriaOS/libk++/sources/string/: memcpy.cpp  string.cpp  strlen.cpp
